apps/immich/kustomization-runtime/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-server
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: server
  ingress:
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "2283"
        protocol: TCP
      - port: "8081"
        protocol: TCP
      - port: "8082"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
        app.kubernetes.io/name: traefik
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: homepage
        app.kubernetes.io/name: homepage
    toPorts:
    - ports:
      - port: "2283"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
        app.kubernetes.io/instance: kube-prometheus-stack-prometheus
        app.kubernetes.io/name: prometheus
        operator.prometheus.io/name: kube-prometheus-stack-prometheus
    toPorts:
    - ports:
      - port: "8081"
        protocol: TCP
      - port: "8082"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  # Immich resolves the OAuth provider during login; keep this to the
  # Authentik hostname instead of opening general internet/LAN egress.
  - toFQDNs:
    - matchName: authentik.yiannis.io
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: immich
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: immich
        app.kubernetes.io/name: valkey
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: immich
        cnpg.io/cluster: immich-database
        cnpg.io/instanceRole: primary
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-valkey
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: valkey
  ingress:
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: immich
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: immich
        app.kubernetes.io/name: server
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
